trying to fix overflow issue on moz ff

--- a/style.scss
+++ b/style.scss
@@ -271,6 +271,9 @@ body, html {
   display: flex;
   justify-content: center;
   align-items: center;
+  scrollbar-width: none;
+  overflow: hidden;
+
 }
 
 .loader {
